--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+:root {
+    --blue: #3882f6;
+}
 
 * {
     margin: 0;
@@ -19,7 +23,11 @@ body {
 
 section {
     flex: 1;
+    width: 100%;
+
 }
+
+/* Header */
 
 .header {
     background-color: #1f2937;
@@ -45,9 +53,10 @@ section {
     font-weight: bolder;
 }
 
+/* Hero Intro Section */
+
 .hero-intro {
     background-color: #1f2937;
-    width: 100%;
     color: #f9faf8;
     display: flex;
     padding: 20px;
@@ -59,6 +68,75 @@ section {
     width: 400px;
     height: 100px;
 }
+
+/* Key Items Section */
+
+.key-items {
+    padding: 20px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
+.key-items>h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    margin-bottom: 24px;
+}
+
+.items-container {
+    width: 80%;
+    height: 200px;
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+    /* border: 1px solid black; */
+    justify-content: space-evenly;
+}
+
+.item {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.item .placeholder {
+    width: 125px;
+    height: 125px;
+    border: 2px solid var(--blue);
+}
+
+/* Social proof Section */
+
+.social-proof {
+    background-color: #e5e8eb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+}
+
+.social-proof blockquote {
+    font-size: 24px;
+    font-weight: 300;
+    font-style: italic;
+    width: 70%;
+}
+
+.social-proof .author {
+    align-self: flex-end;
+    margin-right: 15%;
+    font-weight: bold;
+}
+
+/* Call to Action Section */
+
+
+/* Footer */
 
 footer {
     flex: 0;
