--- a/style.css
+++ b/style.css
@@ -69,6 +69,15 @@ section {
     height: 100px;
 }
 
+.hero-intro button{
+    background-color: var(--blue);
+    color: #e5e8eb;
+    border: none;
+    border-radius: 5px;
+    width: 5rem;
+    padding: 2px;
+}
+
 /* Key Items Section */
 
 .key-items {
@@ -134,13 +143,33 @@ section {
 }
 
 /* Call to Action Section */
+.action-box {
+    margin: 70px;
+    padding: 25px;
+    border-radius: 5px;
+    background-color: var(--blue);
+    color: #e5e8eb;
+    display: flex;
+    justify-content: space-evenly;
+}
 
+.action-box button{
+    background-color: var(--blue);
+    color: #e5e8eb;
+    border: 2px solid white;
+    border-radius: 5px;
+    width: 5rem;
+}
 
 /* Footer */
 
 footer {
-    flex: 0;
+    flex: 0 0 auto;
     background-color: #1f2937;
     color: #f9faf8;
     width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
