--- a/style.css
+++ b/style.css
@@ -115,7 +115,8 @@ section {
 .item .placeholder {
     width: 125px;
     height: 125px;
-    border: 2px solid var(--blue);
+    border: 3px solid var(--blue);
+    border-radius: 5px;
 }
 
 /* Social proof Section */
@@ -170,6 +171,11 @@ footer {
     width: 100%;
     height: 100px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+footer a {
+    color:#e5e8eb;
 }
